# microsoft

./: .gitignore  asd.sh  make_proj.sh
concatenated_string_length_with_unique_characters/: CMakeLists.txt  README.md  main.cpp
count_visible_nodes_in_binary_tree/: CMakeLists.txt  README.md  main.cpp
crop_words/: CMakeLists.txt  README.md  main.cpp
day_of_week/: CMakeLists.txt  README.md  main.cpp
fair_indexes/: CMakeLists.txt  README.md  main.cpp
jump_game/: CMakeLists.txt  README.md  main.cpp
largest_alphabetic_character/: CMakeLists.txt  README.md  main.cpp
largest_integer/: CMakeLists.txt  README.md  main.cpp
largest_m-aligned_subset/: CMakeLists.txt  README.md  main.cpp
largest_number_x_which_occurs_x_times/: CMakeLists.txt  README.md  main.cpp
lexicographically_smallest_string/: CMakeLists.txt  README.md  main.cpp
light_bulb_switcher/: CMakeLists.txt  README.md  main.cpp
logic_based_puzzle_game/: CMakeLists.txt  README.md  main.cpp
longest_semi-alternating_substring/: CMakeLists.txt  README.md  main.cpp
longest_substring_without_2_contiguous_occurrences_of_letter/: CMakeLists.txt  README.md  main.cpp
max_chunks_to_sort_array/: CMakeLists.txt  README.md  main.cpp
max_inserts_to_obtain_string_without_3_consecutive_a/: CMakeLists.txt  README.md  main.cpp
max_length_of_a_concatenated_string_with_unique_characters/: CMakeLists.txt  README.md
max_network_rank/: CMakeLists.txt  README.md  main.cpp
max_possible_value/: CMakeLists.txt  README.md  (+1 more)
min_deletions_to_make_frequency_of_each_letter_unique/: CMakeLists.txt  README.md  main.cpp
(+48 files in other folders)
